feat: add upload asset tracking
